--- a/src/components/Card/index.css
+++ b/src/components/Card/index.css
@@ -1,4 +1,3 @@
-/* Card Container */
 .card {
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -7,11 +6,10 @@
     padding: 16px;
     background-color: #fff;
     display: grid;
-    grid-template-columns: 25% 75%;
+    grid-template-columns: 20% 80%;
     gap: 5%;
   }
   
-  /* Card Header */
   .card-header {
     text-align: center;
     padding: 8px 0;
@@ -22,26 +20,25 @@
     word-wrap: normal;
   }
   
-  /* Title */
   .card-header h2 {
     font-size: 1.5rem;
     margin: 0;
   }
   
-  /* Card Image */
   .card-image img {
     max-width: 100%;
     height: auto;
     border-radius: 4px;
-    margin-top: 10px;
+    margin-top: 40px;
+    margin-left: 10px;
   }
   
-  /* Card Content */
   .card-content {
+    position: relative;
     margin-top: 10px;
+    left: -5%;
   }
   
-  /* Text Content */
   .card-content p {
     font-size: 1rem;
     margin: 30px;
