update: item reshuffle

--- a/src/components/Work/index.css
+++ b/src/components/Work/index.css
@@ -4,6 +4,7 @@
     gap: 5%;
     justify-content: center;
     align-items: center;
+    margin-bottom: 150px;
 }
 
 @media (max-width: 1200px) {
@@ -12,5 +13,6 @@
         max-width: 90%; /* Limits to 90% on smaller screens */
         gap: 2.5%;
         margin-left: 5%;
+        margin-bottom: 250px;
     }
 }
